# Novel-Agent-Infrastructure

./: README.md  README_CN.md
Novel-Agent-Infrastructure/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_CN.md  config.example.yaml  docker-compose.yml  pyproject.toml  setup.py
Novel-Agent-Infrastructure/docs/architecture/: README.md
Novel-Agent-Infrastructure/docs/guides/: agents.md  platforms.md
Novel-Agent-Infrastructure/docs/mcp/: README.md
Novel-Agent-Infrastructure/examples/agents/: workflow_example.py
Novel-Agent-Infrastructure/examples/mcp/: server_example.py
Novel-Agent-Infrastructure/examples/quickstart/: basic_usage.py
Novel-Agent-Infrastructure/src/novel_agent/: __init__.py
Novel-Agent-Infrastructure/src/novel_agent/agents/: __init__.py  character.py  editor.py  outline.py  planner.py  publisher.py  worldbuilder.py  writer.py
Novel-Agent-Infrastructure/src/novel_agent/cli/: __init__.py
Novel-Agent-Infrastructure/src/novel_agent/core/: __init__.py  agent.py  config.py  memory.py  platform.py  story.py
Novel-Agent-Infrastructure/src/novel_agent/mcp/: __init__.py  server.py
Novel-Agent-Infrastructure/src/novel_agent/mcp/tools/: __init__.py  base.py  classify_story.py  generate_chapter_plan.py  generate_character.py  generate_outline.py  generate_world.py  market_analysis.py  publishing_assistant.py  story_memory.py  trend_analysis.py  validate_title.py
Novel-Agent-Infrastructure/src/novel_agent/memory/: __init__.py  graph.py  vector.py
Novel-Agent-Infrastructure/src/novel_agent/utils/: __init__.py  text.py  validation.py
Novel-Agent-Infrastructure/tests/: __init__.py
Novel-Agent-Infrastructure/tests/unit/: __init__.py  test_mcp_tools.py  test_memory.py  test_platform.py
